[package]
name = "vexflowrust"
version = "0.1.0"
edition = "2021"

[dependencies]
ab_glyph = "0.2.25"
clap = "4.5.4"
phf = { version="0.11.2", features=["macros"] }
regex = "1.10.4"
regex-macro = "0.2.0"
relative-path = "1.9.2"
rquickjs = { version="0.6.0", features=["loader", "macro"] }
tiny-skia = { git = "https://github.com/nwhitehead/tiny-skia.git" }
